--- a/modules/bootstrap/app/assets/stylesheets/framework/login/login.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/login/login.css.less
@@ -132,7 +132,7 @@
     padding-bottom: 10px;
     width:395px;
 }
-.login-form-box .content_new {
+.login-form-box .content-new {
     background:url(@bottomNewPath) no-repeat scroll 0 0 transparent;
     height:auto !important;
     margin:0;
