--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -1,58 +1,54 @@
-<%%= form_for(@<%= singular_name %>,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%%= common_title %>
+<%%= form_for(@<%= singular_name %>,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+  <%% content_for :form_block_a   do%>
+    <table class="detailList" cellpadding="0" cellspacing="0" border="0">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%%=t(:label_irm_<%= singular_name %>_new)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%%= f.submit t(:save)%></div>
-            <div class="button"><%%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+        <% for attribute in attributes -%>
+          <tr>
+            <td class="label-col"><label for="<%= attribute.name %>"><%%=t(:label_irm_<%= singular_name %>_<%= attribute.name %>)%></label></td>
+            <td class="data-col"><%%=f.<%= attribute.field_type %> :<%= attribute.name %>, :required=>true ,:id=>"<%= attribute.name %>"%></td>
+            <td class="label-col">&nbsp;</td>
+            <td class="data-col">&nbsp;</td>
+          </tr>
+        <% end -%>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <%%= error_for @<%= singular_name %> %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%%= t(:label_common_info) %></h3>
+  <%% end %>
+  <%% content_for :form_buttons  do %>
+    <%%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
+  <%% end %>
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%%=t(:label_irm_<%= singular_name %>_new)%></h2>
+      </td>
+      <td class="page-block-button">
+        <%%= content_for :form_buttons   %>
+
+      </td>
+    </tr></table>
+    <div class="page-block-body">
+      <%%= error_for @<%= singular_name %> %>
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%%= form_require_info %>
+          <h3 class="sub-page-block-title"><%%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%%= content_for :form_block_a   %>
+        </div>
+      </div>
+
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-          <% for attribute in attributes -%>
-            <tr>
-              <td class="labelCol"><label for="<%= singular_name %>_<%= attribute.name %>"><%%=t(:label_irm_<%= singular_name %>_<%= attribute.name %>)%></label></td>
-              <td class="dataCol"><%%=f.<%= attribute.field_type %> :<%= attribute.name %>, :required=>true ,:id=>"<%= singular_name %>_<%= attribute.name %>"%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
-            </tr>
-          <% end -%>
-        </tbody>
-      </table>
-    </div>
+
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%%= f.submit t(:save)%></div>
-            <div class="button"><%%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <%% end %>
