--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -1,36 +1,24 @@
-<%%= page_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%%= t(:label_irm_<%= singular_name %>_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="<%= plural_name %>SearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="<%= plural_name %>" class="datatable" style="width:100%">
-          <div id="id" style="display:none">
-            <%%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
-          </div>
-        </div>
-        <%%= datatable("<%= plural_name %>",url_for(:action=>"get_data",:format=>"json"),
-                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
-                       <% attributes.each_with_index do |attribute, i|-%>
-                       { :key => "<%= attribute.name %>", :label => t(:label_irm_<%= singular_name %>_<%= attribute.name %>),:searchable=>true }<% if i < attributes.size-1 -%>,<% end %>
-                       <% end -%>
-                       ],{:paginator_box=>"<%= plural_name %>PaginatorBox",:search_box=>"<%= plural_name %>SearchBox"})%>
-        <div id="<%= plural_name %>PaginatorBox"></div>
-      </div>
-    </div>
+<%%= common_title %>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%%= t(:label_irm_<%= singular_name %>_list) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%%= link_to t(:new), {:action => "new"},:class=>"btn"%>
+    </td>
+    <td class="page-block-help">
+      <div id="searchBox"></div>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div id="lookup_type"></div>
+      <%%= datatable("lookup_type",{:action=>"get_data",:format=>"json"},
+                [],
+                 {:search_box=>"searchBox",:paginator_box=>"paginator"})%>
+      <div id="paginator"></div>
+  </div>
 </div>
 
 
