--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -1,33 +1,27 @@
-<%%= page_title %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%%= common_title %>
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%%= t(:label_irm_<%= singular_name %>) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%%= link_to t(:edit), {:action => "edit", :id => @<%= singular_name %>},:class=>"btn"%>
+      <%%= link_to t(:back), {:action => "index"},:class=>"btn" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%%= t(:label_irm_<%= singular_name %>) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%%= link_to t(:edit), {:action => "edit", :id => @incident_phase}%></div>
-            <div class="button"><%%= link_to t(:back), {:action => "index"}%></div>
-          </td>
-        </tr>
+        <% for attribute in attributes -%>
+          <tr>
+            <td class="label-col"><label ><%%=t(:label_irm_<%= singular_name %>_<%= attribute.name %>)%></label></td>
+            <td class="data-col"><div><%%= @<%= singular_name %>.<%= attribute.name %> %></div></td>
+            <td class="label-col empty"><div>&nbsp;</div></td>
+            <td class="data-col empty"><div>&nbsp;</div></td>
+          </tr>
+        <% end %>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-          <% for attribute in attributes -%>
-            <tr>
-              <td class="labelCol"><label ><%%=t(:label_irm_<%= singular_name %>_<%= attribute.name %>)%></label></td>
-              <td class="dataCol"><div><%%= @<%= singular_name %>.<%= attribute.name %> %></div></td>
-              <td class="labelCol empty"><div>&nbsp;</div></td>
-              <td class="dataCol empty"><div>&nbsp;</div></td>
-            </tr>
-          <% end -%>
-        </tbody>
-      </table>
-    </div>
   </div>
 </div>
