--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/xheditor/ui.css
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/plugins/xheditor/ui.css
@@ -94,7 +94,13 @@
 .xheDialog div{padding:2px 0;}
 .xheDialog input{
 	margin:0;border-width:1px;border-style:solid;font-size:12px;
-	*border-width:expression((type!="checkbox")?'1px':0);*padding:expression((type=="text")?'1px':'auto');*width:expression((type=="text")?'160px':'auto');*border-color:expression((type=="text")?'#ABADB3':'#fff #888 #888 #fff');*background:expression((type=="button")?'#F0F0F0':'#FFFFFF');*cursor:expression((type=="button")?'pointer':'');*font-size:expression((type=="button")?'13px':'12px');
+	*border-width:expression((type!="checkbox")?'1px':0);
+    *padding:expression((type=="text")?'1px':'auto');
+    *width:expression((type=="text")?'160px':'auto');
+    *border-color:expression((type=="text")?'#ABADB3':'#fff #888 #888 #fff');
+    *background:expression((type=="button")?'#F0F0F0':'#FFFFFF');
+    *cursor:expression((type=="button")?'pointer':'');
+    *font-size:expression((type=="button")?'13px':'12px');
 }
 .xheDialog textarea{font-size:12px;resize:none;border:1px solid #ccc;}
 .xheDialog input[type=text]{padding:1px;width:160px;border-color:#ABADB3;}
@@ -124,9 +130,9 @@
 	position: fixed;z-index:1000008;top: 0px;left: 0px;height:100%;width:100%;background-color:#000;opacity:0.2; -ms-filter:'alpha(opacity=20)'; filter:alpha(opacity=20);
 	_position:absolute;_height:expression(Math.max(document.documentElement.clientHeight,document.documentElement.scrollHeight)+'px');_width:expression(Math.max(document.documentElement.clientWidth,document.documentElement.scrollWidth)+'px');
 }
-*html{
-	background-image:url(about:blank);
-	background-attachment:fixed;
+html{
+    *background-image:url(about:blank);
+    *background-attachment:fixed;
 }
 
 .xheProgress{position:relative;width:280px;margin:auto;border:1px solid #C1C1C1;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;background:url(/exassets/images/xheditor/progressbg.gif) #E9E9E9;}
