--- a/modules/20_incident_icm/app/views/icm/incident_journals/edit_pass.html.erb
+++ b/modules/20_incident_icm/app/views/icm/incident_journals/edit_pass.html.erb
@@ -54,78 +54,81 @@
   }
 </style>
 <%= common_title(:model_name=>Icm::IncidentRequest.name,:action_meaning=>t(:pass)) %>
-<%= form_for(@incident_request,:url=>{:action=>"update_pass"},:builder => LabellingFormBuilder,:html => { :multipart => true }) do |f| %>
-  <%=f.hidden_field :pass_flag,:value=>"Y" %>
-<div id="reply" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_icm_incident_journal_pass)%></h2></td>
-          <td class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:label_icm_incident_joural_back_to_request), {:action => "new"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList"  cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-            <tr>
-              <td class="labelCol"><label for="incident_request_support_group_id"><%=t(:label_icm_incident_request_support_group)%></label></td>
-              <td class="dataCol">
-                <%=f.select :support_group_id,available_support_group,
-                                                    {},{:required=>true,:id=>"incident_request_support_group_id"}%>
-              </td>
-              <td class="labelCol"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
-              <td class="dataCol"><%= f.blank_select(:support_person_id,available_passable_supporter(@incident_request.support_group_id||0),{},
-                                  {:id=>"incident_request_support_person_id",
-                                   :href=>url_for(:controller=>"icm/support_groups",:action=>"get_pass_member_options",:format=>"json",:id=>"${incident_request_support_group_id}"),
-                                   :depend=>"incident_request_support_group_id"
-                                   }) %></td>
-
-            </tr>
-              <%= fields_for @incident_journal,:as=>"incident_journal",:builder => LabellingFormBuilder,:normal=>true do |sub_f|%>
+<%= form_for(@incident_request,:url=>{:action=>"update_pass"},:builder => CustomFormBuilder,:html => { :multipart => true }) do |f| %>
+    <%=f.hidden_field :pass_flag,:value=>"Y" %>
+    <% content_for :form_block_common   do%>
+        <table class="form-table" style="width: 100%;">
+          <tbody>
+          <tr>
+            <td class="label-col"><label for="incident_request_support_group_id"><%=t(:label_icm_incident_request_support_group)%></label></td>
+            <td class="data-col">
+              <%=f.select :support_group_id,available_support_group,
+                          {},{:required=>true,:id=>"incident_request_support_group_id"}%>
+            </td>
+          </tr>
+          <tr>
+            <td class="label-col"><label for="incident_request_support_person_id"><%=t(:label_icm_incident_request_support_person)%></label></td>
+            <td class="data-col"><%= f.blank_select(:support_person_id,available_passable_supporter(@incident_request.support_group_id||0),{},
+                                                    {:id=>"incident_request_support_person_id",
+                                                     :href=>url_for(:controller=>"icm/support_groups",:action=>"get_pass_member_options",:format=>"json",:id=>"${incident_request_support_group_id}"),
+                                                     :depend=>"incident_request_support_group_id"
+                                                    }) %></td>
+          </tr>
+          <tr>
+            <%= fields_for @incident_journal,:as=>"incident_journal",:builder => LabellingFormBuilder,:normal=>true do |sub_f|%>
                 <%= sub_f.hidden_field(:incident_request_id) %>
-              <td class="labelCol"><%= t(:label_icm_incident_journal_reply) %></td>
-              <td class="dataCol" colspan="3" width="82%">
-                <%= sub_f.text_area :message_body ,:id=>"msgEditor",:cols=>150,:rows=>8,:required=>true%>
-                <%= xheditor("msgEditor",true) %>
-              </td>
-              <% end%>
-            </tr>
-            <tr>
-              <td class="labelCol"><%= t(:label_icm_incident_journal_attachment) %></td>
-              <td class="dataCol" colspan="3" width="82%">
-                <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"pass_incident_request_file"} %>
-              </td>
-            </tr>
-        </tbody>
-      </table>
+                <td class="label-col"><%= t(:label_icm_incident_journal_reply) %></td>
+                <td class="data-col" colspan="3" width="82%">
+                  <%= sub_f.text_area :message_body ,:id=>"msgEditor",:cols=>150,:rows=>8,:required=>true%>
+                  <%= xheditor("msgEditor",true) %>
+                </td>
+            <% end%>
+          </tr>
+          <tr>
+            <td class="label-col"><%= t(:label_icm_incident_journal_attachment) %></td>
+            <td class="data-col" colspan="3" width="82%">
+              <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"pass_incident_request_file"} %>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+    <% end %>
 
-    </div>
-  </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
+    <% content_for :form_buttons  do %>
+        <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+        <%= link_to t(:label_icm_incident_joural_back_to_request), {:action => "new"}, {:class => "btn cancel"} %>
+    <% end %>
+
+    <!--页面结构-->
+    <div class="page-block">
+      <table class="page-block-header">
         <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_to t(:label_icm_incident_joural_back_to_request), {:action => "new"}%></div>
+          <td class="page-block-title">
+            <h2 class="block-title"><%=t(:label_icm_incident_journal_pass)%></h2>
+          </td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
           </td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+      </table>
+      <%= error_for @incident_request %>
+      <div class="page-block-body">
+        <div class="sub-page-block">
+          <div class="sub-page-block-body">
+            <%= content_for :form_block_common   %>
+          </div>
+        </div>
+      </div>
+      <table class="page-block-footer">
+        <tr>
+          <td class="page-block-title"></td>
+          <td class="page-block-button">
+            <%= content_for :form_buttons   %>
+          </td>
+        </tr>
+      </table>
+    </div>
 <% end %>
-
-
-
 
 <script type="text/javascript">
     $(function(){
