--- a/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/80_bootstrap_bsp/app/assets/stylesheets/framework/framework.css.less
@@ -1198,7 +1198,7 @@ div.min-block-body {
 
 .datatable table td {
     margin: 0;
-    padding: 0;
+    padding: 5px 0;
     border: none;
     border-bottom: 1px solid #CBCBCB;
     text-align: left;
