--- a/modules/110_hotline_hli/app/views/icm/incident_requests/index.html.erb
+++ b/modules/110_hotline_hli/app/views/icm/incident_requests/index.html.erb
@@ -1,6 +1,6 @@
 <%= common_title %>
 
-<% if allow_to_function?(:view_icm_kanban) %>
+<% if false && allow_to_function?(:view_icm_kanban) %>
   <div class="btn-toolbar">
     <div class="btn-group">
       <%= link_to(content_tag(:i, "", {:class => "icon-th-list"}) + t(:list_mode), {}, {:class=>"btn btn-mini active",:href => "javascript:void(0)"})%>
